# api-system/swagger/swagger.json
@@ -95,6 +95,47 @@
                 }
             }
         },
+        "/v1/game_users": {
+            "get": {
+                "tags": [
+                    "GameUser API"
+                ],
+                "summary": "查询游戏昵称的所有query_id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "查询过滤",
+                        "name": "filter",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "分页页码，从1开始",
+                        "name": "page_num",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "maximum": 1000,
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "分页大小，最大为1000",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.ApiJson"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/site/notice/": {
             "post": {
                 "security": [
